# robot-control-server

./: .gitignore  README.md  pyproject.toml  setup_workspace.sh
doc/: node_graph.drawio
model/: spiral_3D.xml
model/meshes/: 3d.stl
src/: __init__.py  flask_server.py  main.py  mujoco_controller.py  schemas.py  usb_controller.py
src/act/: package.xml  setup.cfg  setup.py
src/act/act/: motor_node.py  speaker_node.py
src/control/: package.xml  setup.py
src/control/control/: cmd_print_node.py  motor_node.py  speaker_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Motor.action
src/octopus/: CMakeLists.txt  package.xml
src/octopus/launch/: system.launch.xml
src/perception/: package.xml  setup.py
src/perception/perception/: depth_camera_node.py  keyboard_node.py  microphone_node.py
src/plan/: package.xml  setup.cfg  setup.py
src/plan/plan/: central_brain_node.py  dummy_central_brain_node.py  mini_brain_node.py
src/planning/: package.xml  setup.py
src/planning/planning/: central_brain_node.py  mini_brain_node.py
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: system.launch.xml
src/sense/: package.xml  setup.cfg  setup.py
src/sense/sense/: depth_camera_node.py  keyboard_node.py  microphone_node.py  motor_feedback_node.py  text_input_node.py
src/sim/: package.xml  setup.cfg  setup.py
src/sim/sim/: mujoco_node.py
src/simulation/: package.xml  setup.py
src/simulation/simulation/: mujoco_node.py
