[project]
name = "robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.0.0",
    "empy>=4.2",
    "lark>=1.2.2",
    "numpy>=2.2.1",
    "openai>=1.59.7",
    "pynput>=1.7.7",
    "pytest>=8.3.4",
    "sounddevice>=0.5.1",
]
