[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-control-server"
version = "1.0.0"
description = "A Flask server for controlling soft robots via MuJoCo simulation or real hardware"
authors = [{name = "Robot Control Team", email = "team@robot.dev"}]
requires-python = ">=3.9"

dependencies = [
    "flask>=2.3.3",
    "flask-restx>=1.3.0",
    "flask-cors>=4.0.0",
    "werkzeug>=2.3.7",
    "mujoco>=2.3.7",
    "dm-control>=1.0.14",
    "pyserial>=3.5",
    "pydantic>=2.4.2",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "pylint>=2.17.7",
    "pytest>=7.4.3",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "types-flask>=1.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
